Fix z-index in footer

--- a/style.scss
+++ b/style.scss
@@ -226,7 +226,9 @@ body {
         position: fixed;
         width: 100%;
         margin-bottom: 32px;
+        background-color: $white;
         bottom: 0;
+        z-index: 8;
         .footer-list {
             height: 100%;
             display: flex;
